Connecting Our Database with the Express App

--- a/config.env
+++ b/config.env
@@ -1,4 +1,12 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=sadan
-PASSWORD=123456 
+# DATABASE=mongodb+srv://sadanmiyan007:<PASSWORD>@cluster0.xztcolx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+DATABASE=mongodb+srv://sadanmiyan007:<PASSWORD>@cluster0.xztcolx.mongodb.net/natours?retryWrites=true&w=majority
+
+
+# mongodb+srv://sadanmiyan007:<db_password>@cluster0.xztcolx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+
+DATABASE_PASSWORD=ogprUEb9lWCqiOmF
+# mongodb+srv://sadanmiyan007:<db_password>@cluster0.xztcolx.mongodb.net/
