Signing up Users

--- a/config.env
+++ b/config.env
@@ -10,3 +10,7 @@ DATABASE=mongodb+srv://sadanmiyan007:<PASSWORD>@cluster0.xztcolx.mongodb.net/nat
 
 DATABASE_PASSWORD=ogprUEb9lWCqiOmF
 # mongodb+srv://sadanmiyan007:<db_password>@cluster0.xztcolx.mongodb.net/
+
+JWT_SECRET=sadan-ultra-secure-ultra-long-secret
+JWT_EXPIRES_IN=90d
+# 10h 5m 3s
