Sending Emails with Nodemailer

--- a/config.env
+++ b/config.env
@@ -14,3 +14,8 @@ DATABASE_PASSWORD=ogprUEb9lWCqiOmF
 JWT_SECRET=sadan-ultra-secure-ultra-long-secret
 JWT_EXPIRES_IN=90d
 # 10h 5m 3s
+
+EMAIL_USERNAME=6b3f909f7d45ee
+EMAIL_PASSWORD=5eb2e3e22cf01c
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
